<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ru.itmo.iad</groupId>
	<artifactId>photorecognize</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>assessorphotorecognize</name>
	<description>Assessors bot for photo recognizing</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>

		<dependency>
			<groupId>org.telegram</groupId>
			<artifactId>telegrambots</artifactId>
			<version>6.3.0</version>
		</dependency>


		<!--		<dependency>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-devtools</artifactId>
                    <scope>runtime</scope>
                    <optional>true</optional>
                </dependency>-->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- monitoring -->
		<!--<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<version>3.0.0</version>
		</dependency>-->
		<!--		<dependency>
                    <groupId>io.micrometer</groupId>
                    <artifactId>micrometer-registry-prometheus</artifactId>
                    <version>1.10.2</version>
                </dependency>-->
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.8</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>/**/AssessorPhotorecognizeApplication*</exclude>
								<exclude>/**/service/ImageSaver*</exclude>
								<exclude>/**/service/ImageGetter*</exclude>
								<exclude>/**/conf/**</exclude>
								<exclude>/**/domain/**</exclude>
								<exclude>/**/texts/**</exclude>
								<exclude>/**/exception/**</exclude>
								<exclude>/**/photos/**</exclude>
								<exclude>/**/keyboard/**</exclude>
								<exclude>/**/telegram/*</exclude>
								<exclude>/**/assessment/*</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>jacoco-check</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>CLASS</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
							<excludes>
								<exclude>/**/AssessorPhotorecognizeApplication*</exclude>
								<exclude>/**/service/ImageSaver*</exclude>
								<exclude>/**/service/ImageGetter*</exclude>
								<exclude>/**/conf/**</exclude>
								<exclude>/**/domain/**</exclude>
								<exclude>/**/texts/**</exclude>
								<exclude>/**/exception/**</exclude>
								<exclude>/**/photos/**</exclude>
								<exclude>/**/keyboard/**</exclude>
								<exclude>/**/telegram/*</exclude>
								<exclude>/**/assessment/*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
